# deep-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: agent_config.yaml
docs/: MVP_SELECTION.md  PLANNED_ISSUES.md  PROJECT_MILESTONES.md  SDD.md  SRS.md
src/: __init__.py  main.py
src/agents/: __init__.py  orchestrator.py  prompts.py  subagents.py
src/config/: __init__.py  settings.py
src/middleware/: __init__.py
src/state/: __init__.py  schema.py
src/tools/: __init__.py
src/utils/: __init__.py  exceptions.py  file_manager.py  logging_config.py  token_counter.py
tests/: __init__.py  conftest.py  test_config.py  test_exceptions.py  test_file_manager.py  test_logging_config.py  test_orchestrator.py  test_prompts.py  test_state_schema.py  test_subagents.py  test_token_counter.py
